--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
 .DS_Store
-Trello.xcodeproj/xcuserdata/*
-Trello.xcodeproj/project.xcworkspace/xcuserdata/*
-
+osx-netflix.xcodeproj/xcuserdata/*
+osx-netfilx.xcodeproj/project.xcworkspace/xcuserdata/*
